JumpScript/tests/baselines/reference/jsxInvalidEsprimaTestSuite.errors.txt
tests/cases/conformance/jsx/1.jmpx(3,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/jsx/1.jmpx(3,3): error TS1109: Expression expected.
tests/cases/conformance/jsx/1.jmpx(3,4): error TS1109: Expression expected.
tests/cases/conformance/jsx/10.jmpx(1,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/10.jmpx(1,5): error TS1003: Identifier expected.
tests/cases/conformance/jsx/10.jmpx(1,10): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/10.jmpx(1,13): error TS1005: '>' expected.
tests/cases/conformance/jsx/10.jmpx(1,14): error TS2304: Cannot find name 'c'.
tests/cases/conformance/jsx/10.jmpx(1,16): error TS1109: Expression expected.
tests/cases/conformance/jsx/11.jmpx(1,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/11.jmpx(1,8): error TS17002: Expected corresponding JSX closing tag for 'a.b.c'.
tests/cases/conformance/jsx/12.jmpx(1,1): error TS1109: Expression expected.
tests/cases/conformance/jsx/12.jmpx(1,2): error TS1109: Expression expected.
tests/cases/conformance/jsx/12.jmpx(1,5): error TS1109: Expression expected.
tests/cases/conformance/jsx/12.jmpx(1,7): error TS1128: Declaration or statement expected.
tests/cases/conformance/jsx/12.jmpx(1,8): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/12.jmpx(1,10): error TS1109: Expression expected.
tests/cases/conformance/jsx/13.jmpx(1,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/13.jmpx(1,4): error TS1003: Identifier expected.
tests/cases/conformance/jsx/13.jmpx(1,7): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/13.jmpx(1,9): error TS1003: Identifier expected.
tests/cases/conformance/jsx/14.jmpx(1,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/14.jmpx(1,4): error TS2304: Cannot find name 'foo'.
tests/cases/conformance/jsx/14.jmpx(1,9): error TS1109: Expression expected.
tests/cases/conformance/jsx/14.jmpx(1,11): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/14.jmpx(1,13): error TS2304: Cannot find name 'foo'.
tests/cases/conformance/jsx/14.jmpx(1,18): error TS1109: Expression expected.
tests/cases/conformance/jsx/15.jmpx(1,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/15.jmpx(1,11): error TS1109: Expression expected.
tests/cases/conformance/jsx/15.jmpx(1,13): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/15.jmpx(1,22): error TS1109: Expression expected.
tests/cases/conformance/jsx/16.jmpx(1,2): error TS17008: JSX element 'a' has no corresponding closing tag.
tests/cases/conformance/jsx/16.jmpx(1,10): error TS1005: '</' expected.
tests/cases/conformance/jsx/17.jmpx(1,2): error TS17008: JSX element 'a' has no corresponding closing tag.
tests/cases/conformance/jsx/17.jmpx(1,10): error TS1005: '</' expected.
tests/cases/conformance/jsx/18.jmpx(1,9): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/jsx/18.jmpx(1,37): error TS2657: JSX expressions must have one parent element.
tests/cases/conformance/jsx/19.jmpx(1,9): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/jsx/19.jmpx(1,64): error TS2657: JSX expressions must have one parent element.
tests/cases/conformance/jsx/2.jmpx(1,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/20.jmpx(1,10): error TS1005: '}' expected.
tests/cases/conformance/jsx/21.jmpx(1,20): error TS1003: Identifier expected.
tests/cases/conformance/jsx/22.jmpx(1,15): error TS1003: Identifier expected.
tests/cases/conformance/jsx/22.jmpx(1,21): error TS1109: Expression expected.
tests/cases/conformance/jsx/23.jmpx(1,7): error TS1005: '...' expected.
tests/cases/conformance/jsx/23.jmpx(1,7): error TS2304: Cannot find name 'props'.
tests/cases/conformance/jsx/24.jmpx(1,17): error TS1005: '>' expected.
tests/cases/conformance/jsx/24.jmpx(1,18): error TS1128: Declaration or statement expected.
tests/cases/conformance/jsx/24.jmpx(1,21): error TS2304: Cannot find name 'props'.
tests/cases/conformance/jsx/24.jmpx(1,27): error TS1109: Expression expected.
tests/cases/conformance/jsx/24.jmpx(1,28): error TS1109: Expression expected.
tests/cases/conformance/jsx/25.jmpx(1,10): error TS2304: Cannot find name 'props'.
tests/cases/conformance/jsx/25.jmpx(1,28): error TS1005: '>' expected.
tests/cases/conformance/jsx/25.jmpx(1,29): error TS1128: Declaration or statement expected.
tests/cases/conformance/jsx/25.jmpx(1,32): error TS2304: Cannot find name 'props'.
tests/cases/conformance/jsx/25.jmpx(1,38): error TS1109: Expression expected.
tests/cases/conformance/jsx/25.jmpx(1,39): error TS1109: Expression expected.
tests/cases/conformance/jsx/28.jmpx(1,2): error TS17008: JSX element 'a' has no corresponding closing tag.
tests/cases/conformance/jsx/28.jmpx(1,6): error TS1005: '{' expected.
tests/cases/conformance/jsx/28.jmpx(2,1): error TS1005: '</' expected.
tests/cases/conformance/jsx/29.jmpx(1,2): error TS17008: JSX element 'a' has no corresponding closing tag.
tests/cases/conformance/jsx/29.jmpx(1,6): error TS1005: '{' expected.
tests/cases/conformance/jsx/29.jmpx(1,7): error TS1109: Expression expected.
tests/cases/conformance/jsx/29.jmpx(2,1): error TS1005: '</' expected.
tests/cases/conformance/jsx/3.jmpx(1,1): error TS1109: Expression expected.
tests/cases/conformance/jsx/3.jmpx(1,2): error TS1109: Expression expected.
tests/cases/conformance/jsx/3.jmpx(1,3): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/3.jmpx(1,6): error TS1109: Expression expected.
tests/cases/conformance/jsx/3.jmpx(1,7): error TS1109: Expression expected.
tests/cases/conformance/jsx/31.jmpx(1,4): error TS1003: Identifier expected.
tests/cases/conformance/jsx/4.jmpx(1,6): error TS1005: '{' expected.
tests/cases/conformance/jsx/4.jmpx(1,6): error TS2304: Cannot find name 'd'.
tests/cases/conformance/jsx/4.jmpx(1,9): error TS1109: Expression expected.
tests/cases/conformance/jsx/4.jmpx(1,10): error TS1109: Expression expected.
tests/cases/conformance/jsx/4.jmpx(1,11): error TS1005: '/' expected.
tests/cases/conformance/jsx/5.jmpx(1,2): error TS17008: JSX element 'a' has no corresponding closing tag.
tests/cases/conformance/jsx/5.jmpx(1,5): error TS1005: '</' expected.
tests/cases/conformance/jsx/6.jmpx(1,4): error TS17002: Expected corresponding JSX closing tag for 'a'.
tests/cases/conformance/jsx/7.jmpx(1,13): error TS1002: Unterminated string literal.
tests/cases/conformance/jsx/8.jmpx(1,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/8.jmpx(1,6): error TS17002: Expected corresponding JSX closing tag for 'a'.
tests/cases/conformance/jsx/9.jmpx(1,3): error TS1003: Identifier expected.
tests/cases/conformance/jsx/9.jmpx(1,5): error TS1003: Identifier expected.
tests/cases/conformance/jsx/9.jmpx(1,11): error TS1005: '>' expected.
tests/cases/conformance/jsx/9.jmpx(1,12): error TS2304: Cannot find name 'b'.
tests/cases/conformance/jsx/9.jmpx(1,16): error TS1109: Expression expected.


==== tests/cases/conformance/jsx/1.jmpx (3 errors) ====
    declare var React: any;
    
    </>;
    ~~
!!! error TS1128: Declaration or statement expected.
      ~
!!! error TS1109: Expression expected.
       ~
!!! error TS1109: Expression expected.
==== tests/cases/conformance/jsx/2.jmpx (1 errors) ====
    <a: />;
      ~
!!! error TS1003: Identifier expected.
==== tests/cases/conformance/jsx/3.jmpx (5 errors) ====
    <:a />;
    ~
!!! error TS1109: Expression expected.
     ~
!!! error TS1109: Expression expected.
      ~
!!! error TS2304: Cannot find name 'a'.
         ~
!!! error TS1109: Expression expected.
          ~
!!! error TS1109: Expression expected.
==== tests/cases/conformance/jsx/4.jmpx (5 errors) ====
    <a b=d />;
         ~
!!! error TS1005: '{' expected.
         ~
!!! error TS2304: Cannot find name 'd'.
            ~
!!! error TS1109: Expression expected.
             ~
!!! error TS1109: Expression expected.
              
!!! error TS1005: '/' expected.
==== tests/cases/conformance/jsx/5.jmpx (2 errors) ====
    <a>;
     ~
!!! error TS17008: JSX element 'a' has no corresponding closing tag.
        
!!! error TS1005: '</' expected.
==== tests/cases/conformance/jsx/6.jmpx (1 errors) ====
    <a></b>;
       ~~~~
!!! error TS17002: Expected corresponding JSX closing tag for 'a'.
==== tests/cases/conformance/jsx/7.jmpx (1 errors) ====
    <a foo="bar;
                
!!! error TS1002: Unterminated string literal.
==== tests/cases/conformance/jsx/8.jmpx (2 errors) ====
    <a:b></b>;
      ~
!!! error TS1003: Identifier expected.
         ~~~~
!!! error TS17002: Expected corresponding JSX closing tag for 'a'.
==== tests/cases/conformance/jsx/9.jmpx (5 errors) ====
    <a:b.c></a:b.c>;
      ~
!!! error TS1003: Identifier expected.
        ~
!!! error TS1003: Identifier expected.
              ~
!!! error TS1005: '>' expected.
               ~
!!! error TS2304: Cannot find name 'b'.
                   ~
!!! error TS1109: Expression expected.
==== tests/cases/conformance/jsx/10.jmpx (6 errors) ====
    <a.b:c></a.b:c>;
     ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS1003: Identifier expected.
             ~
!!! error TS2304: Cannot find name 'a'.
                ~
!!! error TS1005: '>' expected.
                 ~
!!! error TS2304: Cannot find name 'c'.
                   ~
!!! error TS1109: Expression expected.
==== tests/cases/conformance/jsx/11.jmpx (2 errors) ====
    <a.b.c></a>;
     ~
!!! error TS2304: Cannot find name 'a'.
           ~~~~
!!! error TS17002: Expected corresponding JSX closing tag for 'a.b.c'.
==== tests/cases/conformance/jsx/12.jmpx (6 errors) ====
    <.a></.a>;
    ~
!!! error TS1109: Expression expected.
     ~
!!! error TS1109: Expression expected.
        ~~
!!! error TS1109: Expression expected.
          ~
!!! error TS1128: Declaration or statement expected.
           ~
!!! error TS2304: Cannot find name 'a'.
             ~
!!! error TS1109: Expression expected.
==== tests/cases/conformance/jsx/13.jmpx (4 errors) ====
    <a.></a.>;
     ~
!!! error TS2304: Cannot find name 'a'.
       ~
!!! error TS1003: Identifier expected.
          ~
!!! error TS2304: Cannot find name 'a'.
            ~
!!! error TS1003: Identifier expected.
==== tests/cases/conformance/jsx/14.jmpx (6 errors) ====
    <a[foo]></a[foo]>;
      ~
!!! error TS1003: Identifier expected.
       ~~~
!!! error TS2304: Cannot find name 'foo'.
            ~~
!!! error TS1109: Expression expected.
              ~
!!! error TS2304: Cannot find name 'a'.
                ~~~
!!! error TS2304: Cannot find name 'foo'.
                     ~
!!! error TS1109: Expression expected.
==== tests/cases/conformance/jsx/15.jmpx (4 errors) ====
    <a['foo']></a['foo']>;
      ~
!!! error TS1003: Identifier expected.
              ~~
!!! error TS1109: Expression expected.
                ~
!!! error TS2304: Cannot find name 'a'.
                         ~
!!! error TS1109: Expression expected.
==== tests/cases/conformance/jsx/16.jmpx (2 errors) ====
    <a><a />;
     ~
!!! error TS17008: JSX element 'a' has no corresponding closing tag.
             
!!! error TS1005: '</' expected.
==== tests/cases/conformance/jsx/17.jmpx (2 errors) ====
    <a b={}>;
     ~
!!! error TS17008: JSX element 'a' has no corresponding closing tag.
             
!!! error TS1005: '</' expected.
==== tests/cases/conformance/jsx/18.jmpx (2 errors) ====
    var x = <div>one</div><div>two</div>;;
            ~~~~~~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                        ~
!!! error TS2657: JSX expressions must have one parent element.
==== tests/cases/conformance/jsx/19.jmpx (2 errors) ====
    var x = <div>one</div> /* intervening comment */ <div>two</div>;;
            ~~~~~~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                                                                   ~
!!! error TS2657: JSX expressions must have one parent element.
==== tests/cases/conformance/jsx/20.jmpx (1 errors) ====
    <a>{"str";}</a>;
             ~
!!! error TS1005: '}' expected.
==== tests/cases/conformance/jsx/21.jmpx (1 errors) ====
    <span className="a", id="b" />;
                       ~
!!! error TS1003: Identifier expected.
==== tests/cases/conformance/jsx/22.jmpx (2 errors) ====
    <div className"app">;
                  ~~~~~
!!! error TS1003: Identifier expected.
                        ~
!!! error TS1109: Expression expected.
==== tests/cases/conformance/jsx/23.jmpx (2 errors) ====
    <div {props} />;
          ~~~~~
!!! error TS1005: '...' expected.
          ~~~~~
!!! error TS2304: Cannot find name 'props'.
    
==== tests/cases/conformance/jsx/24.jmpx (5 errors) ====
    <div>stuff</div {...props}>;
                    ~
!!! error TS1005: '>' expected.
                     ~~~
!!! error TS1128: Declaration or statement expected.
                        ~~~~~
!!! error TS2304: Cannot find name 'props'.
                              ~
!!! error TS1109: Expression expected.
                               ~
!!! error TS1109: Expression expected.
    
==== tests/cases/conformance/jsx/25.jmpx (6 errors) ====
    <div {...props}>stuff</div {...props}>;
             ~~~~~
!!! error TS2304: Cannot find name 'props'.
                               ~
!!! error TS1005: '>' expected.
                                ~~~
!!! error TS1128: Declaration or statement expected.
                                   ~~~~~
!!! error TS2304: Cannot find name 'props'.
                                         ~
!!! error TS1109: Expression expected.
                                          ~
!!! error TS1109: Expression expected.
    
    
==== tests/cases/conformance/jsx/26.jmpx (0 errors) ====
    <a>></a>;
    
==== tests/cases/conformance/jsx/27.jmpx (0 errors) ====
    <a> ></a>;
    
==== tests/cases/conformance/jsx/28.jmpx (3 errors) ====
    <a b=}>;
     ~
!!! error TS17008: JSX element 'a' has no corresponding closing tag.
         ~
!!! error TS1005: '{' expected.
    
    
!!! error TS1005: '</' expected.
==== tests/cases/conformance/jsx/29.jmpx (4 errors) ====
    <a b=<}>;
     ~
!!! error TS17008: JSX element 'a' has no corresponding closing tag.
         ~
!!! error TS1005: '{' expected.
          ~
!!! error TS1109: Expression expected.
    
    
!!! error TS1005: '</' expected.
==== tests/cases/conformance/jsx/30.jmpx (0 errors) ====
    <a>}</a>;
    
==== tests/cases/conformance/jsx/31.jmpx (1 errors) ====
    <a .../*hai*/asdf/>;
       ~~~
!!! error TS1003: Identifier expected.